--- a/twig-parser-demo/app/templates/application.hbs
+++ b/twig-parser-demo/app/templates/application.hbs
@@ -1,5 +1,7 @@
 {{page-title "TwigParserDemo"}}
 
-<h2 id="title">Welcome to Ember</h2>
+<h1 class="text-3xl font-bold underline">
+  Hello world!
+</h1>
 
 {{outlet}}
