--- a/website/app/templates/application.hbs
+++ b/website/app/templates/application.hbs
@@ -1,7 +1,9 @@
-{{page-title "TwigParserDemo"}}
+<div class="flex flex-col h-screen">
+  <header class="flex-none px-3 py-4 sm:px-4 lg:px-6 shadow">
+    <h1 class="text-2xl font-bold">Twig Parser</h1>
+  </header>
 
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
-
-{{outlet}}
+  <main class="grow">
+    {{outlet}}
+  </main>
+</div>
