Add play controller

--- a/website/app/templates/application.hbs
+++ b/website/app/templates/application.hbs
@@ -3,7 +3,7 @@
     <h1 class="text-2xl font-bold">Twig Parser</h1>
   </header>
 
-  <main class="grow">
+  <main class="grow flex">
     {{outlet}}
   </main>
 </div>
