Add monaco editor

--- a/website/app/templates/play.hbs
+++ b/website/app/templates/play.hbs
@@ -1,9 +1,5 @@
 <div class="flex-1 flex items-stretch">
-  <div
-    class="flex-auto p-4"
-    contenteditable="true"
-    {{on "input" this.onCodeChanged}}
-  ></div>
+  <MonacoEditor class="flex-auto p-4" @value="hello"/>
   <div class="flex-none border-solid border-2"></div>
   <div class="flex-1 p-4">
     {{this.ast}}
