--- a/website/app/templates/play.hbs
+++ b/website/app/templates/play.hbs
@@ -1,11 +1,13 @@
 <div class="flex-1 flex items-stretch">
   <MonacoEditor
-    class="flex-auto p-4"
+    class="flex-1 border-r-1"
     @value={{this.code}}
     @onDidChangeModelContent={{set this "code"}}
   />
-  <div class="flex-none border-solid border-2"></div>
-  <div class="flex-1 p-4">
-    {{this.ast}}
-  </div>
+  <MonacoEditor
+    class="flex-1"
+    @value={{this.ast}}
+    @language="json"
+    @readOnly={{true}}
+  />
 </div>
