--- a/packages/website/app/templates/play.hbs
+++ b/packages/website/app/templates/play.hbs
@@ -1,4 +1,4 @@
-<div class="flex-1 flex items-stretch">
+<div class="flex-1 flex items-stretch mt-4">
   <MonacoEditor
     class="flex-1 border-r-1"
     @value={{this.code}}
